--- a/force-app/main/default/layouts/TEST_app__c-TEST app Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/TEST_app__c-TEST app Layout.layout-meta.xml
@@ -10,6 +10,14 @@
                 <behavior>Required</behavior>
                 <field>Name</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>dxfield__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>dxfield_AN__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
